# WvsBMLNIDS

./: .gitattributes  .gitignore  README.md  plan.md  pyproject.toml
configs/: paths.yaml
configs/blackbox/: assembly.yaml  embed_core.yaml
configs/datasets/: cicids2017.yaml  dapt20.yaml
env/: environment.yml  requirements.txt
env/conda/: README.md  base-rocm721.yml  setup_envs.ps1
env/docker/: BUILD_RECIPES.md  README.md
env/docker/ppp-assembler/: CMakeLists.txt  Dockerfile  flow_assemble.cpp
results/tables/: ablations.md  attack_counts_by_tool_cicids2017.md  b2_master.md  b5_report.md  b6_frontier.md  blackbox_cost.md  cross_dataset.md  dapt20_ablations.md  dapt20_b2_master.md  dapt20_b5_report.md  dapt20_b6_frontier.md  dapt20_feature_divergence.md  dapt20_flow_divergence.md  dapt20_ml_master.md  dapt20_rq4_bug_impact.md  dapt20_significance.md  dapt20_transfer_matrix.md  dapt20_variance_decomposition.md  (+17 more)
scripts/: attack_counts_by_tool.py  derive_dapt20_rules.py  extract.py  flow_count_compare.py  label.py  label_all.py  phase2_report.py  phase3_report.py  reextract.py  repair_truncated_pcap.py  run_cross_dataset.py  run_phase1_extract.py  run_phase2_align.py  run_phase2_features.py  run_phase3_ml.py  run_phase3_transfer.py  run_phase4_ml_ablations.py  run_phase4_report.py  run_phase4_timeout.py  run_phase5_stats.py  validate_labels.py  yaf_fix_thursday.py
tests/: conftest.py  test_assembly.py  test_canonical.py  test_docker_extractors.py  test_flow_alignment.py  test_labeling.py  test_nfstream_smoke.py  test_tranalyzer_smoke.py  test_zeek_smoke.py
(+3409 files in other folders)
