[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nids-xstudy"
version = "0.1.0"
description = "Impact of white-box feature extraction on ML-based NIDS performance"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "smoke: fast smoke tests on the synthetic fixture PCAP",
    "docker: requires a running Docker daemon + built extractor images",
    "realdata: requires the raw CICIDS2017 PCAPs on disk",
]
